# ADAMAH

./: .gitignore  DESIGN.md  GUIDE.md  INSTRUCTIONS.md  LICENSE  Makefile  README.md  SHA256SUMS.txt  STATUS.md  adamah.c  adamah.h  compile.sh  pyproject.toml  setup.py  test.c  test.py  test_adamah  test_performance.py
adamah/: __init__.py  adamah.c  uucis.py
adamah-5.1.0/: README.md  install.sh
adamah-5.1.0/adamah/: adamah.c  uucis.py
adamah-5.1.0/adamah/shaders/q8/: map_scatter.spv
adamah-5.1.0/adamah/shaders/src/q8/: map_gather.comp  map_matmul.comp
adamah-5.1.0/benchmarks/: benchmark_mixed_nonlinear.py
adamah/shaders/: map_gather.comp  map_layernorm.comp  map_op1.comp  map_op1.spv  map_op2.comp  map_op2.spv  map_reduce.comp  map_reduce.spv  map_reduce_small.comp  map_reduce_small.spv  map_scatter.comp  map_softmax.comp  unified.comp
adamah/shaders/q8/: map_gather.spv  map_matmul.spv
adamah/shaders/src/q8/: map_scatter.comp
benchmarks/: benchmark_mixed_nonlinear.py  benchmark_simple_batches.py
src/adamah/: __init__.py  adamah.c  adamah.h  adamah_v4.c
src/adamah/shaders/: binary.comp  binary.spv  compile.sh  map_broadcast.comp  map_broadcast.spv  map_layernorm.spv  map_matmul.comp  map_op1.comp  map_op1.spv  map_op2.comp  map_op2.spv  map_softmax.spv  scalar.comp  scalar.spv  unary.comp  unary.spv
