[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adamah"
version = "4.0.0"
description = "Map-Centric GPU Compute Library"
readme = "README.md"
license = {text = "CC BY-NC 4.0"}
authors = [{name = "Samuele Scuglia"}]
requires-python = ">=3.8"
dependencies = ["numpy"]
keywords = ["gpu", "vulkan", "compute", "maps", "scatter", "gather"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
]

[project.urls]
Homepage = "https://github.com/samuele-scuglia/adamah"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
adamah = ["*.c", "*.so", "shaders/*.spv"]
